--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,15 +7,13 @@
 
     <!-- For GL ES 1.0, the line below is not required and minSdkVersion 4 is sufficient -->
     <uses-feature android:glEsVersion="0x00020000" android:required="true" />
-    
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
-    
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
+        android:fullBackupContent="@xml/backup_descriptor"
         tools:targetApi="n">
 
         <activity
@@ -42,11 +40,25 @@
                 <data android:pathPattern=".*\\.SDF" />
             </intent-filter>
         </activity>
-        <activity android:name=".MyPreferenceActivity" android:screenOrientation="portrait" />
-        <activity android:name=".PDBSearcher" android:configChanges="orientation|keyboardHidden"/>
-        <activity android:name=".PubChemSearcher" android:configChanges="orientation|keyboardHidden"/>
-        <activity android:name=".SearcherTab" android:configChanges="orientation|keyboardHidden"/>
-        <activity android:name=".FileBrowser" android:configChanges="orientation|keyboardHidden"/>
+        <activity
+            android:name=".MyPreferenceActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".PDBSearcher"
+            android:configChanges="orientation|keyboardHidden" />
+        <activity
+            android:name=".PubChemSearcher"
+            android:configChanges="orientation|keyboardHidden" />
+        <activity
+            android:name=".SearcherTab"
+            android:configChanges="orientation|keyboardHidden" />
+        <activity
+            android:name=".FileBrowser"
+            android:configChanges="orientation|keyboardHidden" />
     </application>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
 </manifest>
