--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="jp.sfjp.webglmol.NDKmol"
+    package="com.github.alashkov83.NDKmol"
     android:versionCode="20"
     android:versionName="0.97" >
 
@@ -18,7 +18,7 @@
 
         <activity
             android:label="@string/app_name"
-            android:name="NDKmolActivity"
+            android:name="com.github.alashkov83.NDKmol.NDKmolActivity"
             android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden">
             <intent-filter >
@@ -41,24 +41,25 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MyPreferenceActivity"
+            android:name="jp.com.github.webglmol.NDKmol.MyPreferenceActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".PDBSearcher"
+            android:name="jp.com.github.webglmol.NDKmol.PDBSearcher"
             android:configChanges="orientation|keyboardHidden" />
         <activity
-            android:name=".PubChemSearcher"
+            android:name="jp.com.github.webglmol.NDKmol.PubChemSearcher"
             android:configChanges="orientation|keyboardHidden" />
         <activity
-            android:name=".SearcherTab"
+            android:name="jp.com.github.webglmol.NDKmol.SearcherTab"
             android:configChanges="orientation|keyboardHidden" />
         <activity
-            android:name=".FileBrowser"
+            android:name="jp.com.github.webglmol.NDKmol.FileBrowser"
             android:configChanges="orientation|keyboardHidden" />
     </application>
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission-sdk-23 android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
 </manifest>
