--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,9 +12,18 @@ android {
     }
 
     buildTypes {
-        release {
-            minifyEnabled false
+        release {			
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+            ndk {
+                abiFilters "armeabi-v7a", "x86"
+            }
+
+        }
+        debug {
+            ndk {
+                abiFilters "armeabi-v7a", "x86"
+            }
         }
     }
     externalNativeBuild {
@@ -22,5 +31,15 @@ android {
             path file('src/main/jni/Android.mk')
         }
     }
+
+}
+
+dependencies {
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.google.android.material:material:1.1.0'
+    testImplementation 'junit:junit:4.13'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
 }
