--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,35 +3,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.github.alashkov83.NDKmol"
     android:versionCode="20"
-    android:versionName="0.97" >
-
-    <!-- For GL ES 1.0, the line below is not required and minSdkVersion 4 is sufficient -->
-    <uses-feature android:glEsVersion="0x00020000" android:required="true" />
+    android:versionName="0.98">
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:fullBackupContent="@xml/backup_descriptor"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:fullBackupContent="@xml/backup_descriptor"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme"
         tools:targetApi="n">
 
         <activity
-            android:label="@string/app_name"
             android:name="com.github.alashkov83.NDKmol.NDKmolActivity"
-            android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden">
-            <intent-filter >
-                <action android:name="android.intent.action.MAIN" android:screenOrientation="portrait" />
+            android:configChanges="orientation|keyboardHidden"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action
+                    android:name="android.intent.action.MAIN"
+                    android:screenOrientation="portrait" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            <intent-filter >
+            <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE"/>
-                <data android:scheme="http"/>
-                <data android:scheme="file"/>
-                <data android:host="*"/>
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="http" />
+                <data android:scheme="file" />
+                <data android:host="*" />
                 <data android:pathPattern=".*\\.pdb" />
                 <data android:pathPattern=".*\\.PDB" />
                 <data android:pathPattern=".*\\.mol" />
@@ -55,9 +59,24 @@
         <activity
             android:name="com.github.alashkov83.NDKmol.FileBrowser"
             android:configChanges="orientation|keyboardHidden" />
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths" />
+        </provider>
     </application>
 
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
+
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <uses-permission-sdk-23 android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
