--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         tools:targetApi="n">
 
         <activity
-            android:name="com.github.alashkov83.NDKmol.NDKmolActivity"
+            android:name=".NDKmolActivity"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name"
             android:screenOrientation="portrait">
@@ -45,19 +45,19 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.github.alashkov83.NDKmol.MyPreferenceActivity"
+            android:name=".MyPreferenceActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.github.alashkov83.NDKmol.PDBSearcher"
+            android:name=".PDBSearcher"
             android:configChanges="orientation|keyboardHidden" />
         <activity
-            android:name="com.github.alashkov83.NDKmol.PubChemSearcher"
+            android:name=".PubChemSearcher"
             android:configChanges="orientation|keyboardHidden" />
         <activity
-            android:name="com.github.alashkov83.NDKmol.SearcherTab"
+            android:name=".SearcherTab"
             android:configChanges="orientation|keyboardHidden" />
         <activity
-            android:name="com.github.alashkov83.NDKmol.FileBrowser"
+            android:name=".FileBrowser"
             android:configChanges="orientation|keyboardHidden" />
 
         <provider
@@ -75,9 +75,9 @@
         android:glEsVersion="0x00020000"
         android:required="true" />
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
     <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <uses-permission-sdk-23 android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
